--- a/assets/css/product-grid.css
+++ b/assets/css/product-grid.css
@@ -6,6 +6,11 @@
   width: 25%;
   flex-shrink: 0;
 }
+@media (max-width: 640px) {
+  .phyto-grid-container .sidebar {
+    display: none;
+  }
+}
 .phyto-grid-container .phyto-product-grid {
   display: flex;
   flex-wrap: wrap;
@@ -55,6 +60,11 @@
 }
 .phyto-grid-container .phyto-product-grid .phyto-grid-item .thumbnail:hover img {
   scale: 1;
+}
+@media (max-width: 640px) {
+  .phyto-grid-container .phyto-product-grid .phyto-grid-item {
+    width: 100%;
+  }
 }
 
 form .form-control {
