--- a/assets/sass/product-grid.scss
+++ b/assets/sass/product-grid.scss
@@ -4,6 +4,9 @@
   .sidebar {
     width: 25%;
     flex-shrink: 0;
+    @media (max-width: 640px) {
+      display: none;
+    }
   }
   .phyto-product-grid {
     display: flex;
@@ -58,6 +61,10 @@
           }
         }
       }
+
+      @media (max-width: 640px) {
+        width: 100%;
+      }
     }
   }
 }
@@ -100,5 +107,3 @@ form {
     color: #fff;
   }
 }
-
-//    <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
